# OpenTS3-DS

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build-exe.bat
asm/: data_stream.s
include/: entity.h
include/core/: pipeline_core.h
include/game/: entity.h  entity_structs.h
src/: data_stream.c  main.c
src/core/: data_stream.c  engine_renderer.c  entity_factory.c  entity_manager.c  entity_renderer.c  entity_system.c  hw_interface.c  render_flush.c  system_utils.c
src/game/: entity.c
